# protobuf-decompiler

./: .gitignore  BinaryMetadataExtractor.cpp  BinaryMetadataExtractor.h  CMakeLists.txt  FilesystemMetadataExtractor.cpp  FilesystemMetadataExtractor.h  MetadataExtractor.cpp  MetadataExtractor.h  README.md  main.cpp
